<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="PluralsCandidate,ButtonCase,StringFormatCount">
    <string name="__blank" />
    <string name="_temp">TempTemp Temp Tempytemp</string>
    <string name="_dosecast">My KP Meds</string>
    <string name="_none">None</string>
    <string name="_done">Save</string>
    <string name="_cancel">CANCEL</string>
    <string name="_ok">OK</string>
    <string name="_edit">Edit</string>
    <string name="_on">On</string>
    <string name="_off">Off</string>
    <string name="_clear">Clear</string>
    <string name="_delete">Delete</string>
    <string name="_schedule">Schedule</string>
    <string name="_never">Never</string>
    <string name="_starting">Starting</string>
    <string name="_ending">Ending</string>
    <string name="_after_dose">after dose</string>
    <string name="_reset">Reset</string>
    <string name="_not_set">Not Set</string>
    <string name="_notes">Notes</string>
    <string name="_action">Action</string>
    <string name="_limit">Limit</string>
    <string name="_for">For</string>
    <string name="_me">me</string>
    <string name="once_or_more_per_day">Daily</string>
    <string name="_weekly">Weekly</string>
    <string name="_monthly">Monthly</string>
    <string name="_week">Week</string>
    <string name="_weeks">Weeks</string>
    <string name="_day">Day</string>
    <string name="_days">Days</string>
    <string name="days">days</string>
    <string name="_hour">Hour</string>
    <string name="_hours">Hours</string>
    <string name="_minute">Minute</string>
    <string name="_minutes_small">mins</string>
    <string name="_minutes">Minutes</string>
    <string name="_today">Today</string>
    <string name="_tomorrow">Tomorrow</string>
    <string name="_yesterday">Yesterday</string>
    <string name="_all">All</string>
    <string name="_prescription">Prescription</string>
    <string name="_otc">OTC</string>
    <string name="_searching">Searching&#8230;</string>
    <string name="_up">Up</string>
    <string name="_every_interval">Every %1$s</string>
    <string name="cannot_be_postponed_subst">%1$s cannot be postponed past %2$s.</string>
    <string name="_dose">dose</string>
    <string name="_doses">doses</string>
    <string name="at_limit">At Daily Limit!</string>
    <string name="dosage">Dosage</string>
    <string name="drug_name">Medication Name</string>
    <string name="drug_database_name_search_title">Select Medication Name</string>
    <string name="select_variant">Select Variant</string>
    <string name="select_variant_help">Select the variant of this medication.</string>
    <string name="enter_more_search_text">To search, enter at least 3 characters.</string>
    <string name="no_drugs_found">No medications found in database. Revise your search term or tap Cancel to enter a custom medication name.</string>
    <string name="pick_a_variant">Select one of the medication variants.</string>
    <string name="drug_name_required">Medication name is required.</string>
    <string name="drug_type">Medication Type</string>
    <string name="drug_types_custom">Custom Medication Types</string>
    <string name="drug_type_custom">Custom Medication Type</string>
    <string name="drug_type_in_use">%1$s can not be deleted because one or more medications (%2$s) are using it.</string>
    <string name="drug_directions">Directions</string>
    <string name="drug_take_drug">Take Medication</string>
    <string name="_units_in_stock">Units in stock</string>
    <string name="refills_remaining">Refills Remaining</string>
    <string name="refill_alert_none">No refill alerts</string>
    <string name="refill_alert_one_day">1 day before empty</string>
    <string name="refill_alert_multiple_days">%d days before empty</string>
    <string name="refill_alert_one_week">1 week before empty</string>
    <string name="refill_alert_multiple_weeks">%d weeks before empty</string>
    <string name="refill_alert_one_dose">1 dose before empty</string>
    <string name="refill_alert_multiple_doses">%d doses before empty</string>
    <string name="refill_dialog_i_understand">I understand</string>
    <string name="_doctor">Doctor</string>
    <string name="_pharmacy">Pharmacy</string>
    <string name="_prescription_num">Prescription #</string>
    <string name="no_contacts">Sorry, this device doesn\'t seem to have a contacts application.</string>
    <string name="on_a_schedule">On a Schedule</string>
    <string name="as_needed">As needed</string>
    <string name="end_must_be_after_start">The medication\'s end date must be after its start date (currently %1$s). Choose a later date.</string>
    <string name="limit_per_day">Per Day</string>
    <string name="limit_per_24hours">Per 24 Hours</string>
    <string name="edit_drug">Edit Medication</string>
    <string name="new_drug">New Medication</string>
    <string name="managed_drug_changed_header">New From Kaiser Permanente</string>
    <string name="managed_drug_updated_header">Updated</string>
    <string name="early_dose_warning_subst">Your Next dose of %1$s is scheduled to be taken more than one hour from now (%2$s).
        \n\nChange the settings to disable this alert.</string>
    <string name="early_dose_warning_subst_more_than_one">These Medications are scheduled to be taken more than one hour from now (%2$s).
        \n\nChange the settings to disable this alert.</string>
    <string name="phone_default">Phone Default</string>
    <string name="setting_reminder_sound_help">Medication reminder sound:</string>
    <string name="setting_signout_confirm">Sign Out?</string>
    <string name="edit_history_no_entries">No dose log entries for %1$s for the past %2$d days.</string>
    <string name="edit_history_entry_event_time">Event Time</string>
    <string name="history_email_subject">My KP Meds Medication History Log</string>
    <string name="history_email_description">The My KP Meds medication history log for %1$s for the past %2$s is attached.</string>
    <string name="server_progress">Please wait while we update your information</string>
    <string name="server_failure">Server Error: An internal error has occurred on the My KP Meds server. Please try again in a few minutes, and if the issue persists, please contact us.</string>
    <string name="send_mail">Send mail&#8230;</string>
    <string name="email_title">Privacy Alert</string>
    <string name="email_warning">Are you sure you want to send? Your medication information will no longer be protected by the secure My KP Meds app.</string>
    <string name="email_drug_summary_subject">My KP Meds Medication List</string>
    <string name="email_drug_body">The current list of medications tracked in My KP Meds is attached.</string>
    <string name="email_drug_table_wrapper">
<![CDATA[
	    <!DOCTYPE html PUBLIC \"-//W3C//DTD HTML 4.01 Transitional//EN\" \"http://www.w3.org/TR/html4/loose.dtd\" />
		<html>
			<head>
				<meta http-equiv=\"Content-Type\" content=\"text/html; charset=ISO-8859-1\" />
				<title>My KP Meds Log</title>
			</head>
			<body style=\"background: none; font-family: Helvetica, sans-serif; font-size: 13px; margin: 0; padding: 0 15px; text-align: left; text-decoration: none;\">
				<div class=\"container\" style=\"background: none; margin: 0; padding: 0; text-decoration: none; display: block;\">
					<div class=\"headerTitle bold\" style=\"font-family: Helvetica Neue; font-size: 14px; font-weight: bold; color: #000000; margin: 0; display: block;\">
					    <div style=\"background:none;margin:0;padding:0;text-decoration:none;display:block\">
					        <div style=\"margin:0;display:block\">
					        	<table style=\"border-collapse:collapse;border:1px solid #797979;padding:0;text-decoration:none;vertical-align:bottom\" cellpadding=\"3\">
					            	<tbody>%1$s</tbody>
					        	</table>
					        </div>
					    </div>
					</div>
					<div class=\"footer\" style=\"font-family: Helvetica Neue; font-size: 12px; color: #000000; font-style:italic; margin: 0; width: 80%%; display: block;\">
					    <p>These are the medications as entered into the My KP Meds App. This list may or may not match your medical record.</p>
					</div>
				</div>
			</body>
		</html>
	]]>
    </string>
    <string name="email_html_drug_table_header_row">
<![CDATA[
        <tr style=\"background:none repeat scroll 0 0 #cccccc;font-size:12px;min-height:25px;width:auto\">%1$s</tr>
    ]]>
    </string>
    <string name="email_html_drug_table_data_row">
<![CDATA[
        <tr>%1$s</tr>
    ]]>
    </string>
    <string name="email_html_drug_table_column">
<![CDATA[
        <td style=\"font-family:Helvetica Neue;border:1px solid black\">%1$s</td>
    ]]>
    </string>
    <string name="person_in_use">%1$s can not be deleted until that person\'s medications (%2$s) are assigned to someone else.</string>
    <string name="history_menu_email">Email</string>
    <string name="history_menu_edit">Edit</string>
    <string name="broadcastPermission">Broadcast Permission</string>
    <string name="network_error_text">A network connection cannot be established. Please try again later.</string>
    <string name="dialog_touch_outside_sign_in">Sign In</string>
    <string name="delete_drug_title">Delete Medication?</string>
    <string name="delete_drug_hint">This action cannot be undone.</string>
    <string name="_archive_med">Archiving medication</string>
    <string name="_archive_med_description">Hide this medication from your medication list.</string>
    <string name="archive_otc_medication_list_header_text">Personally added medications</string>
    <string name="archive_kphc_medication_list_header_text">Kaiser Permanente medications</string>
    <string name="archive_kphc_medication_list_message_text">To remove these medications off your list,\n please contact your primary care physician</string>
    <string name="button_reminder_med">Refill Medications</string>
    <string name="button_refill_reminder">Create Refill Reminder</string>
    <string name="schedule_screen_empty_text">No medications\nscheduled</string>
    <string name="archive_empty_help_text"><b>You have no medications in this list.</b>\n\nTo archive a medication, go to the list or detail view of Medications.\n\nArchived medications can be restored later if needed.</string>
    <string name="history_email">Email History</string>
    <string name="title_activity_over_due_reminder_screen">OverDueReminderScreen</string>
    <string name="medications">Medications</string>
    <string name="Monday">Monday</string>
    <string name="Tuesday">Tuesday</string>
    <string name="WednessDay">Wednesday</string>
    <string name="Thursday">Thursday</string>
    <string name="Friday">Friday</string>
    <string name="Saturday">Saturday</string>
    <string name="Sunday">Sunday</string>
    <string name="txt_item_labelled">Label</string>
    <string name="txt_item_value">Value</string>
    <string name="txt_imagecontentdesc">contentDescription</string>
    <string name="reminders">Reminders</string>
    <string name="remind_me_again_cancel">Cancel</string>
    <string name="rem_first"><b>15</b>\nmin</string>
    <string name="rem_second"><b>30</b>\nmin</string>
    <string name="rem_third"><b>45</b>\nmin</string>
    <string name="rem_fourth"><b>60</b>\nmin</string>
    <string name="cancel">Cancel</string>
    <string name="archive">Archive</string>
    <string name="susan">Susan</string>
    <string name="_18">18</string>
    <string name="sun_day">Su</string>
    <string name="mon_day">Mo</string>
    <string name="tues_day">Tu</string>
    <string name="wednes_day">We</string>
    <string name="thurs_day">Th</string>
    <string name="fri_day">Fr</string>
    <string name="satur_day">Sa</string>
    <string name="remind_later_text">When would you like to be reminded?</string>
</resources>