<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/labelled_text_root"
    style="@style/finger_friendly_height"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@xml/highlight_style"
    android:gravity="center_vertical">

    <TextView
        android:id="@+id/labelled_text_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:text="@string/txt_item_labelled"
        android:textColor="@color/Text_blue"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/labelled_text_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:gravity="right"
        android:text="@string/txt_item_value"
        android:textColor="#000000" >
    </TextView>

    <ImageView
        android:id="@+id/labelled_text_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="5dip"
        android:layout_marginRight="5dip"
        android:src="@drawable/edit_item" 
        android:contentDescription="@string/txt_imagecontentdesc">
    </ImageView>

</LinearLayout>